[package]
name = "trace-recorder-printer"
version = "0.1.0"
edition = "2021"
authors = ["Jon Lamb"]
description = "Print Percepio TraceRecorder streaming data from file"
license-file = "LICENSE-MIT"
repository = "https://github.com/jonlamb-gh/trace-recorder-printer"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
exitcode = "1.1"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.1"
tabular = "0.2"
itertools = "0.13"
trace-recorder-parser = "0.19"

[target.'cfg(target_family = "unix")'.dependencies]
# Used to prevent panics on broken pipes.
# See:
#   https://github.com/rust-lang/rust/issues/46016#issuecomment-605624865
nix = { version = "0.29", features = ["signal"] }
