[package]
name = "trace-recorder-printer"
version = "1.5.0"
edition = "2021"
authors = ["Jon Lamb"]
description = "Print Percepio TraceRecorder streaming data from file"
license-file = "LICENSE-MIT"
repository = "https://github.com/jonlamb-gh/trace-recorder-printer"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
exitcode = "1.1"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.1"
comfy-table = "7.1.3"
itertools = "0.13"
statrs = "0.17"
trace-recorder-parser = "0.19"

[target.'cfg(target_family = "unix")'.dependencies]
# Used to prevent panics on broken pipes.
# See:
#   https://github.com/rust-lang/rust/issues/46016#issuecomment-605624865
nix = { version = "0.29", features = ["signal"] }

[package.metadata.deb]
extended-description = """\
A CLI to Print Percepio TraceRecorder streaming data from file. \

See https://github.com/jonlamb-gh/trace-recorder-printer for \
more information."""
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    ["target/release/trace-recorder-printer", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/trace-recorder-printer/README", "644"],
]
